# ascent_microservice

./: CMakeLists.txt  README.md  alaska.cmake_options  setup.py  spack.yaml  spack.yaml.theta  theta.cmake_options
examples/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/alpha/: Client.hpp  Provider.hpp
include/ams/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  NodeHandle.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  UUID.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  NodeHandle.cpp  NodeHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  ams-admin.pc.in  ams-client.pc.in  ams-config.cmake.in  ams-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  Main.cpp  NodeTest.cpp
